--- a/css/sideBar.css
+++ b/css/sideBar.css
@@ -1,4 +1,4 @@
-.side_nav {
+.sideNav {
     height: 100%;
     width: 0;
     position: fixed;
@@ -11,20 +11,20 @@
     padding-top: 60px;
 }
   
-.side_nav a {
+.sideNav a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 20px;
     color: #fff;
     display: block;
     transition: 0.3s;
 }
 
-.side_nav a:hover {
+.sideNav a:hover {
   color: #000;
 }
 
-.side_nav .closebtn {
+.sideNav .closeBtn {
   position: absolute;
   top: 0;
   right: 25px;
@@ -33,6 +33,6 @@
 }
   
 @media screen and (max-height: 450px) {
-    .side_nav {padding-top: 15px;}
-    .side_nav a {font-size: 18px;}
+    .sideNav {padding-top: 15px;}
+    .sideNav a {font-size: 18px;}
 }
