--- a/css/sideBar.css
+++ b/css/sideBar.css
@@ -1,23 +1,23 @@
 .sideNav {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: rgba(70, 105, 188, .95);
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgba(70, 105, 188, 0.95);
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 40px;
 }
-  
+
 .sideNav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 20px;
-    color: #fff;
-    display: block;
-    transition: 0.3s;
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 20px;
+  color: #fff;
+  display: block;
+  transition: 0.3s;
 }
 
 .sideNav a:hover {
@@ -31,8 +31,12 @@
   font-size: 36px;
   margin-left: 50px;
 }
-  
-@media screen and (max-height: 450px) {
-    .sideNav {padding-top: 15px;}
-    .sideNav a {font-size: 18px;}
+
+@media screen and (max-height: 660px) {
+  .sideNav {
+    padding-top: 10px;
+  }
+  .sideNav a {
+    font-size: 18px;
+  }
 }
