--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0px;
-    font-family: 'Ubuntu', sans-serif;
-    font-weight: 300;
+	font-family: "Ubuntu", sans-serif;
+	font-weight: 300;
 }
 
 #body {
@@ -12,9 +12,8 @@ body {
 	width: 0px;
 }
 
-.topBar{
-	background-color: rgb(73, 107, 190);
-	padding: 1rem;
+.topBar {
+	background-color: #496bbe;
 	color: #fff;
 	justify-content: space-between;
 	height: 10px;
@@ -24,17 +23,32 @@ body {
 	position: fixed;
 	top: 0;
 	width: 100%;
-	padding-top: 5px;	
-	padding-bottom: 30px;	
+	padding-top: 5px;
+	padding-bottom: 30px;
 	z-index: 1;
 }
 
+#openSide {
+	margin: 1rem;
+}
+
+.progress-container {
+	width: 100%;
+	height: 16px;
+}
+
+.progress-bar {
+	height: 16px;
+	background: rgb(75, 108, 190, 0.7);
+	width: 100%;
+}
+
 .header {
-    background: rgb(73, 107, 190);
-    padding: 1rem;
-    color: #fff;
-    display: flex;
-    font-size: 30px;
+	background: #496bbe;
+	padding: 1rem;
+	color: #fff;
+	display: flex;
+	font-size: 30px;
 }
 
 .headerTitle {
@@ -43,18 +57,18 @@ body {
 }
 
 .footer {
-    background: rgb(73, 107, 190);
-    padding: 1rem;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 16px;
+	background: #496bbe;
+	padding: 1rem;
+	color: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	font-size: 16px;
 }
 
 svg.footerIcon {
-    height: 24px;
-    fill: #fff;
+	height: 24px;
+	fill: #fff;
 }
 
 #loadingMessage {
@@ -95,7 +109,7 @@ svg.footerIcon {
 	border-radius: 7px;
 	height: 100%;
 	padding: 20px 0px;
-	position: absolute;	
+	position: absolute;
 	top: -20px;
 	left: 0px;
 	right: 0px;
@@ -152,19 +166,19 @@ svg.footerIcon {
 }
 
 .info.leftInfo {
-	left: 0px;	
+	left: 0px;
 }
 
 .info.rightInfo {
-	right: 0px;	
+	right: 0px;
 }
 
 .info:after,
 .info:before {
 	content: "";
 	display: block;
-	width: 0; 
-	height: 0; 
+	width: 0;
+	height: 0;
 	position: absolute;
 	top: 0px;
 }
@@ -196,8 +210,8 @@ svg.footerIcon {
 .info.rightInfo:after {
 	left: -15px;
 	border-top: 15px solid transparent;
-	border-bottom: 15px solid transparent; 
-	border-right:15px solid #f4f4f4; 
+	border-bottom: 15px solid transparent;
+	border-right: 15px solid #f4f4f4;
 }
 
 .infoDate {
